--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#"
+            <a class="nav-link" href="index.html"
               >Inicio<span class="sr-only">(current)</span></a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Animales en adopción</a>
+            <a class="nav-link" href="adopcion.html">Animales en adopción</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Sobre nosotros</a>
+            <a class="nav-link" href="nosotros.html">Sobre nosotros</a>
           </li>
         </ul>
       </div>
